--- a/menu/menu.html
+++ b/menu/menu.html
@@ -19,7 +19,7 @@
                 <li class="list" data-filter="insalate">Insalate</li> 
                 <li class="list" data-filter="bibite&virgins">Bibite e virgins</li> 
                 <li class="list" data-filter="birrespina">Birre alla spina</li> 
-                <li class="list" data-filter="inbottiglia">Birre In bottiglia</li>
+                <li class="list" data-filter="inbottiglia">Birre in bottiglia</li>
                 <li class="list" data-filter="sommergibile">Sommergibile (piccola/media)</li> 
                 <li class="list" data-filter="vini">Vini</li> 
                 <li class="list" data-filter="cocktail">Cocktail</li> 
@@ -155,7 +155,6 @@
                     <p>Rossa con verdure alla griglia</p>
                     <p>Prezzo: &euro;10.00</p>
                 </div>
-                 
                 <div class="itemBox" data-item="crostini">
                     <h3>Fornarina al crudo</h3>
                     <p>Sale, olio, rosmarino, prosciutto crudo</p>
@@ -269,32 +268,58 @@
                 <!-- Birre alla spina -->
                 <div class="itemBox" data-item="birrespina">
                     <h3>Harp (5%)</h3>
-                    <p>Piccola &euro; 4.00 <br> Media &euro; 6.00 <br>Boccale &euro; 12.00<br>Caraffa &euro; 18
-                </div> 
-<!--            <div class="itemBox" data-item="birrespina">
-                    <h3>Dolomiti (5.4%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;6.00</p>
+                            <p>Boccale: &euro;12.00</p>
+                            <p>Caraffa: &euro;18.00</p>
+                        </div>
+                    </div>
                 </div>
--->
                 <div class="itemBox" data-item="birrespina">
                     <h3>Tennet's super (9%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;6.00</p>
+                            <p>Boccale: &euro;12.00</p>
+                            <p>Caraffa: &euro;18.00</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="itemBox" data-item="birrespina">
                     <h3>Marzen (5.8%)</h3>
-                    <p>Piccola &euro; 4 <br> Media &euro; 6,5 <br>Boccale &euro; 13.00 <br> Caraffa &euro; 19.50</p>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;6.50</p>
+                            <p>Boccale: &euro;13.00</p>
+                            <p>Caraffa: &euro;19.50</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="itemBox" data-item="birrespina">
                     <h3>Paulaner Weiss (5.5%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;6.50</p>
+                            <p>Boccale: &euro;13.00</p>
+                            <p>Caraffa: &euro;18.50</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="itemBox" data-item="birrespina">
                     <h3>Guinnes (4.2%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;6.50</p>
+                            <p>Boccale: &euro;13.00</p>
+                            <p>Caraffa: &euro;18.50</p>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- In bottiglia -->
