--- a/index.html
+++ b/index.html
@@ -7,21 +7,27 @@
         <script src="https://kit.fontawesome.com/8d7e2d832c.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <section class="home" id="home">
-            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
-            <a href="/menu/menu.html" target="_blank">Scopri il men&ugrave;</a>
-        </section>
-
-        <!-- Navbar -->
-        <nav class="navbar">
+        <nav id="navbar" class="navbar navbar-expand-md navbar-light bg-light">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <label class="logo">
+                <a href="#home">MALT & HOPS</a>
+            </label>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#chisiamo">Chi Siamo</a></li>
                 <li><a href="#servizi">Servizi</a></li>
+                <li><a href="#faqs">FAQs</a></li>
                 <li><a href="#contatti">Contatti</a></li>
-                <!-- Aggiungi altri link qui -->
             </ul>
         </nav>
+
+        <section class="home" id="home">
+            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
+            <a href="/menu/menu.html" target="_blank">Scopri il men&ugrave;</a>
+        </section>
 
         <section class="chisiamo" id="chisiamo">
             <div class="title">
@@ -151,6 +157,10 @@
                             <span class="text">Via Emilia Levante 137/7, (BO)</span>
                         </div>
                         <div class="info-item">
+                            <span class="icon"><i class="fas fa-file-invoice"></i></span>
+                            <span class="text">P.IVA: xxxxxxxxxxxxxx</span>
+                        </div>
+                        <div class="info-item">
                             <span class="icon"><i class="fas fa-phone"></i></span>
                             <span class="text">051 049 2408</span>
                         </div>
@@ -172,6 +182,10 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5693.578414311283!2d11.384631477548933!3d44.478493371074784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477e2b17cf704f4f%3A0xcaa7a3d342983505!2sMalt%26Hops%20Pub%20Bologna!5e0!3m2!1sit!2sit!4v1727968628260!5m2!1sit!2sit" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
             </div>
+        </section>
+
+        <section class="developer">
+            <p>Developed by <a href="https://www.instagram.com/wdm.corp/" target="_blank">WDM - Web Development & Management</a></p>
         </section>
 
         <script src="./script.js"></script>
