--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <a href="#home">MALT & HOPS</a>
             </label>
             <ul>
-                <li><a href="/menu/menu.html" target="_blank">Men&ugrave;</a></li>
+                <li><a href="./menu/menu.html" target="_blank">Men&ugrave;</a></li>
+                <li><a href="./eventi/eventi.html" target="_blank">Eventi</a></li>
                 <li><a href="#chisiamo">Chi Siamo</a></li>
                 <li><a href="#servizi">Servizi</a></li>
-                <li><a href="#faqs">FAQs</a></li>
                 <li><a href="#contatti">Contatti</a></li>
             </ul>
         </nav>
