--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 <a href="#home">MALT & HOPS</a>
             </label>
             <ul>
-                <li><a href="./menu/menu.html" target="_blank">Men&ugrave;</a></li>
-                <li><a href="./eventi/eventi.html" target="_blank">Eventi</a></li>
+                <li><a href="./menu/menu.html">Men&ugrave;</a></li>
+                <li><a href="./eventi/eventi.html">Eventi</a></li>
+                <li><a href="./shop/shop.html">Shop</a></li>
                 <li><a href="#chisiamo">Chi Siamo</a></li>
-                <li><a href="#servizi">Servizi</a></li>
                 <li><a href="#contatti">Contatti</a></li>
             </ul>
         </nav>
 
         <section class="home" id="home">
             <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
-            <a href="/menu/menu.html" target="_blank">Scopri il men&ugrave;</a>
+            <a href="/menu/menu.html">Scopri il men&ugrave;</a>
         </section>
 
         <section class="chisiamo" id="chisiamo">
@@ -57,7 +57,7 @@
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="./shop/shop.html" target="_blank">Scopri di pi&ugrave;</a>
+                        <a href="./shop/shop.html">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
 
@@ -70,7 +70,7 @@
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="./menu/menu.html" target="_blank">Scopri di pi&ugrave;</a>
+                        <a href="./menu/menu.html">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="./eventi/eventi.html" target="_blank">Scopri di pi&ugrave;</a>
+                        <a href="./eventi/eventi.html">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
             </div>
