--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Siamo aperti tutti i giorni dalle 12:00 alle 23:00.<br>
-                      Lunedì: 19-23<br>
-                      Martedì: 19-23<br>
-                      ...
+                      Siamo aperti tutti i giorni dalle 18:00 alle 1:00.<br>
+                      LUN-GIO: 18:30-01:00<br>
+                      VEN-SAB: 18:30-02:00<br>
+                      Domenica Relax
                     </p>
                   </div>
                 </div>
