--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             </div>
             <div class="content">
                 <p>
-                  Malt & Hops &egrave; nato dallal passione per la buona cucina e l'amore per la cultura nerd.
-                  Situato nel cuore di Bologna, offriamo un ambiente accogliente dove gustare piatti italiani autentici e birre artigianali di alta qualit&agrave;.
-                  Il nostro ristorante &egrave; il luogo ideale per famiglie, amici e appassionati che cercano un'esperienza culinaria unica. 
-                  Con serate a tema e un'atmosfera solare, ci impegniamo a rendere ogni visita speciale.
+                  Malt & Hops &egrave; Nel nostro risto-pub, la tradizione irlandese incontra il calore bolognese. Un luogo dove il buon cibo, le birre artigianali e l'atmosfera accogliente si uniscono per regalarti momenti indimenticabili.
+
+		Che tu stia cercando una serata con gli amici, un evento speciale o semplicemente un angolo dove rilassarti con una pinta e un sorriso, qui sei a casa. La nostra cucina propone piatti gustosi preparati con ingredienti freschi, perfetti per accompagnare una selezione di birre e drink scelti con cura.
+
+		Il nostro pub è il punto d'incontro per chi ama la compagnia, le risate e la magia di sentirsi in famiglia.
                 </p>
             </div>
         </section>
