--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
         <section class="chisiamo" id="chisiamo">
             <div class="title">
-                <h1>Malt & Hops</h1>
+                <h1>BENVENUTO</h1>
             </div>
             <div class="content">
                 <p>
-                  Malt & Hops &egrave; Nel nostro risto-pub, la tradizione irlandese incontra il calore bolognese. Un luogo dove il buon cibo, le birre artigianali e l'atmosfera accogliente si uniscono per regalarti momenti indimenticabili.
+                Nel nostro risto-pub, la tradizione irlandese incontra il calore bolognese. Un luogo dove il buon cibo, le birre artigianali e l'atmosfera accogliente si uniscono per regalarti momenti indimenticabili.
 
 		Che tu stia cercando una serata con gli amici, un evento speciale o semplicemente un angolo dove rilassarti con una pinta e un sorriso, qui sei a casa. La nostra cucina propone piatti gustosi preparati con ingredienti freschi, perfetti per accompagnare una selezione di birre e drink scelti con cura.
 
-		Il nostro pub è il punto d'incontro per chi ama la compagnia, le risate e la magia di sentirsi in famiglia.
+		Il nostro pub &egrave; il punto d'incontro per chi ama la compagnia, le risate e la magia di sentirsi in famiglia.
                 </p>
             </div>
         </section>
