--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section class="chisiamo" id="chisiamo">
             <div class="title">
-                <h1>BENVENUTO</h1>
+                <h1>Benvenuto al Malt&Hops</h1>
             </div>
             <div class="content">
                 <p>
