--- a/menu/menu.html
+++ b/menu/menu.html
@@ -40,29 +40,29 @@
                     <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
-                    <h3>Golosone</h3>
-                    <p>W&uuml;rstel e patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <h3>Cotoletta all Bolognese</h3>
+                    <p>Contorno di patate al forno</p>
+                    <p>Prezzo: &euro;18.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
-                    <h3>Americano</h3>
-                    <p>250g di hamburger di angus e patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <h3>God Bless The Burger</h3>
+                    <p>200g di hamburger di angus e patate fritte</p>
+                    <p>Prezzo: &euro;13.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Contadino</h3>
                     <p>Spiedini di pollo alla brace e patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <p>Prezzo: &euro;13.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Regaz</h3>
                     <p>Cotoletta casalinga con patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <p>Prezzo: &euro;13.00</p>
                 </div>
-                <div class="itemBox" data-item="malt">
+               <!-- <div class="itemBox" data-item="malt">
                     <h3>Troppo buono</h3>
                     <p>Salsiccia alla griglia e patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <p>Prezzo: &euro;12.00</p>-->
                 </div>
 
                 <!-- Toast amerigani -->
