--- a/menu/menu.html
+++ b/menu/menu.html
@@ -59,10 +59,10 @@
                     <p>Cotoletta casalinga con patate fritte</p>
                     <p>Prezzo: &euro;13.00</p>
                 </div>
-               <!-- <div class="itemBox" data-item="malt">
+               <div class="itemBox" data-item="malt">
                     <h3>Troppo buono</h3>
                     <p>Salsiccia alla griglia e patate fritte</p>
-                    <p>Prezzo: &euro;12.00</p>-->
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
 
                 <!-- Toast amerigani -->
