--- a/menu/menu.html
+++ b/menu/menu.html
@@ -104,39 +104,49 @@
 
                 <!-- I nostri hamburger -->
                 <div class="itemBox" data-item="hamburger">
-                    <h3>Malt & Hops Giant + Patate fritte</h3>
+                    <h3>Malt & Hops + Patate fritte</h3>
                     <p>200g di carne di angus, bacon croccante, fontina, cipolla caramellata, pomodoro, lattuga, maionese, ketchup</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <p>Prezzo: &euro;13.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
-                    <h3>Giant bacon cheese + Patate fritte</h3>
+                    <h3>Bacon Cheese + Patate fritte</h3>
                     <p>200g di carne di angus, bacon croccante, fontina, lattuga, salsa barbeque</p>
-                    <p>Prezzo: &euro;12.00</p>
-                </div>
-                <div class="itemBox" data-item="hamburger">
-                    <h3>Giant Kikki + Patate fritte</h3>
-                    <p>200g di carne di angus, pomodoro, lattuga, salsa piccante</p>
-                    <p>Prezzo: &euro;12.00</p>
-                </div>
-                <div class="itemBox" data-item="hamburger">
-                    <h3>Lovo burger + Patate fritte</h3>
-                    <p>Straccetti di maiale speziati, cipolla caramellata, uvetta, salsa barbeque</p>
                     <p>Prezzo: &euro;13.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Kikki + Patate fritte</h3>
+                    <p>200g di carne di angus, pomodoro, lattuga, salsa piccante</p>
+                    <p>Prezzo: &euro;13.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Lovo Burger + Patate fritte</h3>
+                    <p>Straccetti di maiale speziati, cipolla caramellata, uvetta, salsa barbeque</p>
+                    <p>Prezzo: &euro;15.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Pulled Pork + Patate fritte</h3>
+                    <p>Straccetti di maiale speziati, cipolla caramellata, uvetta, salsa barbecue</p>
+                    <p>Prezzo: &euro;14.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Burger Vegetariano + Patate fritte</h3>
+                    <p>Verdure grigliate, fontina, senape</p>
+                    <p>Prezzo: &euro;12.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Hot dog</h3>
                     <p>W&uuml;rstel, senape, maionese, ketchup</p>
-                    <p>Prezzo: &euro;5.00</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Super dog</h3>
                     <p>W&uuml;rstel, cipolla caramellata, lattuga, maionese, ketchup</p>
-                    <p>Prezzo: &euro;5.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Chilly dog</h3>
                     <p>W&uuml;rstel, fontina, chilly, senape</p>
-                    <p>Prezzo: &euro;5.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
 
                 <!-- I nostri crostini -->
