--- a/menu/menu.html
+++ b/menu/menu.html
@@ -12,11 +12,11 @@
         <section>
             <select id="filterDropdown">
                 <option class="list active" value="all">Tutti</option> 
-                <option class="list" value="malt">I piatti del Malt</option> 
-                <option class="list" value="toast">Toast amerigani</option> 
-                <option class="list" value="hamburger">I nostri hamburger</option> 
-                <option class="list" value="crostini">I nostri crostini</option> 
-                <option class="list" value="insalate">Insalate</option> 
+                <option class="list" value="malt">I PIATTI DEL MALT</option> 
+                <option class="list" value="toast">TOAST AMERIGANI</option> 
+                <option class="list" value="hamburger">HAMBURGERS</option> 
+                <option class="list" value="crostini">PINSE ROMANEi</option> 
+                <option class="list" value="insalate">INSALATE</option> 
                 <option class="list" value="bibite&virgins">Bibite e virgins</option> 
                 <option class="list" value="birrespina">Birre alla spina</option> 
                 <option class="list" value="inbottiglia">Birre in bottiglia</option>
@@ -33,7 +33,7 @@
             </select>
             <div class="product">
 
-                <!-- I piatti del Malt -->
+                <!-- I PIATTI DEL MALT -->
                 <div class="itemBox" data-item="malt">
                     <h3>Fuori menu (primi e secondi)</h3>
                     <p>Cambiano periodicamente. Chiedete allo staff.</p>
@@ -65,7 +65,7 @@
                     <p>Prezzo: &euro;12.00</p>
                 </div>-->
 
-                <!-- Toast amerigani -->
+                <!-- TOAST AMERIGANI -->
                 <div class="itemBox" data-item="toast">
                     <h3>Bobbie's</h3>
                     <p>Prosciutto crudo, mozzarella, maionese</p>
@@ -102,7 +102,7 @@
                     <p>Prezzo: &euro;6.50</p>
                 </div>
 
-                <!-- I nostri hamburger -->
+                <!-- HAMBURGERS -->
                 <div class="itemBox" data-item="hamburger">
                     <h3>Malt & Hops + Patate fritte</h3>
                     <p>200g di carne di angus, bacon croccante, fontina, cipolla caramellata, pomodoro, lattuga, maionese, ketchup</p>
@@ -149,7 +149,7 @@
                     <p>Prezzo: &euro;6.50</p>
                 </div>
 
-                <!-- I nostri crostini -->
+                <!-- PINSE ROMANE -->
                 <div class="itemBox" data-item="crostini">
                     <h3>Fornarina</h3>
                     <p>Sale, olio, rosmarino</p>
@@ -173,25 +173,25 @@
                 <div class="itemBox" data-item="crostini">
                     <h3>Diavola</h3>
                     <p>Pomodoro, mozzarella, salame piccante</p>
-                    <p>Prezzo: &euro;10.00</p>
+                    <p>Prezzo: &euro;11.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Red king</h3>
                     <p>Funghi, salsiccia, grana</p>
-                    <p>Prezzo: &euro;10.00</p>
+                    <p>Prezzo: &euro;12.50</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Sherlock holemes</h3>
                     <p>Speck, gorgonzola</p>
-                    <p>Prezzo: &euro;10.00</p>
+                    <p>Prezzo: &euro;12.50</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Campagnolo</h3>
                     <p>Pancetta croccante, grana, rucola, aceto balsamico</p>
-                    <p>Prezzo: &euro;12.00</p>
+                    <p>Prezzo: &euro;12.50</p>
                 </div>
 
-                <!-- Insalate -->
+                <!-- INSALATE -->
                 <div class="itemBox" data-item="insalate">
                     <h3>Insalata estate</h3>
                     <p>Tonno, lattuga, cipolla, pomodoro, olive nere</p>
