--- a/menu/menu.html
+++ b/menu/menu.html
@@ -299,6 +299,17 @@
                     </div>
                 </div>
                 <div class="itemBox" data-item="birrespina">
+                    <h3>Freeride IPA (5.2%)</h3>
+                    <div class="prezziInFila">
+                        <div>
+                            <p>Piccola: &euro;4.00</p>
+                            <p>Media: &euro;7.00</p>
+                            <p>Boccale: &euro;14.00</p>
+                            <p>Caraffa: &euro;21.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="itemBox" data-item="birrespina">
                     <h3>Marzen (5.8%)</h3>
                     <div class="prezziInFila">
                         <div>
