--- a/menu/menu.html
+++ b/menu/menu.html
@@ -35,8 +35,8 @@
 
                 <!-- I PIATTI DEL MALT -->
                 <div class="itemBox" data-item="malt">
-                    <h3>Fuori menu (primi e secondi)</h3>
-                    <p>Cambiano periodicamente. Chiedete allo staff.</p>
+                    <h3>Fuori Menù (primi e secondi)</h3>
+                    <p>Cambiano periodicamente. Chiedere allo staff.</p>
                     <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
@@ -46,7 +46,7 @@
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>God Bless The Burger</h3>
-                    <p>200g di hamburger di angus e patate fritte</p>
+                    <p>200g di hamburger di Angus e patate fritte</p>
                     <p>Prezzo: &euro;13.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
@@ -134,17 +134,17 @@
                     <p>Prezzo: &euro;12.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
-                    <h3>Hot dog</h3>
+                    <h3>Hot Dog</h3>
                     <p>W&uuml;rstel, senape, maionese, ketchup</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
-                    <h3>Super dog</h3>
+                    <h3>Super Dog</h3>
                     <p>W&uuml;rstel, cipolla caramellata, lattuga, maionese, ketchup</p>
                     <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
-                    <h3>Chilly dog</h3>
+                    <h3>Chilly Dog</h3>
                     <p>W&uuml;rstel, fontina, chilly, senape</p>
                     <p>Prezzo: &euro;6.50</p>
                 </div>
@@ -176,12 +176,12 @@
                     <p>Prezzo: &euro;11.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
-                    <h3>Red king</h3>
+                    <h3>Red King</h3>
                     <p>Funghi, salsiccia, grana</p>
                     <p>Prezzo: &euro;12.50</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
-                    <h3>Sherlock holemes</h3>
+                    <h3>Sherlock Holemes</h3>
                     <p>Speck, gorgonzola</p>
                     <p>Prezzo: &euro;12.50</p>
                 </div>
@@ -193,17 +193,17 @@
 
                 <!-- INSALATE -->
                 <div class="itemBox" data-item="insalate">
-                    <h3>Insalata estate</h3>
+                    <h3>Insalata Estate</h3>
                     <p>Tonno, lattuga, cipolla, pomodoro, olive nere</p>
                     <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="insalate">
-                    <h3>Insalata adriatica</h3>
+                    <h3>Insalata Adriatica</h3>
                     <p>Lattuga, pomodoro, mozzarella, carote, prosciutto cotto</p>
                     <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="insalate">
-                    <h3>Insalata gold</h3>
+                    <h3>Insalata Gold</h3>
                     <p>A fantasia della cucina</p>
                     <p>Prezzo: &euro;9.00</p>
                 </div>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Succhi di frutta</h3>
-                    <p>Ananas/Arancia/Pesca/Pera/ACE</p>
+                    <p>Ananas/Arancia//Pera/Mirtillo</p>
                     <p>Prezzo: &euro;3.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
@@ -292,9 +292,9 @@
                     <div class="prezziInFila">
                         <div>
                             <p>Piccola: &euro;4.00</p>
-                            <p>Media: &euro;6.00</p>
-                            <p>Boccale: &euro;12.00</p>
-                            <p>Caraffa: &euro;18.00</p>
+                            <p>Media: &euro;6.50</p>
+                            <p>Boccale: &euro;13.00</p>
+                            <p>Caraffa: &euro;19.50</p>
                         </div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                             <p>Piccola: &euro;4.00</p>
                             <p>Media: &euro;6.50</p>
                             <p>Boccale: &euro;13.00</p>
-                            <p>Caraffa: &euro;18.50</p>
+                            <p>Caraffa: &euro;19.50</p>
                         </div>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
                             <p>Piccola: &euro;4.00</p>
                             <p>Media: &euro;6.50</p>
                             <p>Boccale: &euro;13.00</p>
-                            <p>Caraffa: &euro;18.50</p>
+                            <p>Caraffa: &euro;19.50</p>
                         </div>
                     </div>
                 </div>
@@ -354,11 +354,11 @@
                     <p></p>
                     <p>Prezzo: &euro;5.00</p>
                 </div>
-                <div class="itemBox" data-item="inbottiglia">
+               <!-- <div class="itemBox" data-item="inbottiglia">
                     <h3>Sidro 0.5L</h3>
                     <p></p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div> -->
                 <div class="itemBox" data-item="inbottiglia">
                     <h3>Birra analcolica/Senza glutine 0.33L</h3>
                     <p></p>
