--- a/menu/menu.html
+++ b/menu/menu.html
@@ -208,9 +208,9 @@
                     <p>Prezzo: &euro;9.00</p>
                 </div>
 
-                <!-- Bibite e virgins -->
+                <!-- VIRGINS -->
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Coca cola</h3>
+                    <h3>Coca Cola</h3>
                     <p></p>
                     <p>Prezzo: &euro;3.50</p>
                 </div>
@@ -225,17 +225,17 @@
                     <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Acqua tonica</h3>
+                    <h3>Acqua Tonica</h3>
                     <p></p>
                     <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>The freddo</h3>
+                    <h3>The Freddo</h3>
                     <p>Limone o Pesca</p>
                     <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Coca zero in lattina</h3>
+                    <h3>Coca Zero in lattina</h3>
                     <p></p>
                     <p>Prezzo: &euro;3.50</p>
                 </div>
@@ -250,27 +250,27 @@
                     <p>Prezzo: &euro;2.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Red bull</h3>
+                    <h3>Red Bull</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Analcolico alla frutta</h3>
+                    <h3>Analcolico alla Frutta</h3>
                     <p>A fantasia del barista</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Virgin mojito</h3>
+                    <h3>Virgin Mojito</h3>
                     <p>Zucchero, lime, menta, soda</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Virgin colada</h3>
+                    <h3>Virgin Colada</h3>
                     <p>Ananas, cocco</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
-                    <h3>Virgin caipiroska</h3>
+                    <h3>Virgin Caipiroska</h3>
                     <p>Zucchero, lime, soda <br>(su richiesta aggiunta di fragola/papaya)</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
@@ -367,7 +367,7 @@
 
                 <!-- Sommergibile (piccola/media) -->
                 <div class="itemBox" data-item="sommergibile">
-                    <h3>Sandy line</h3>
+                    <h3>Sandy Line</h3>
                     <p>Acqua tonica e birra chiara</p>
                     <p>Prezzo: &euro;3.50/&euro;5.00</p>
                 </div>
@@ -411,15 +411,25 @@
                 <div class="itemBox" data-item="vini">
                     <h3>Bianchi/Rossi/Prosecco</h3>
                     <p>Calice</p>
-                    <p>Prezzo: &euro;5.50</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="vini">
                     <h3>Bianchi/Rossi/Prosecco</h3>
                     <p>Bottiglia</p>
-                    <p>Prezzo: &euro;20.00/&euro;22.00/&euro;25.00</p>
+                    <p>Prezzo: &euro;24.00</p>
                 </div>
                 
                  <!-- Cocktail -->
+                  <div class="itemBox" data-item="cocktail">
+                    <h3>Spritz Venturo</h3>
+                    <p>Venturo, Prosecco, tonica</p>
+                    <p>Prezzo: &euro;8.00</p>
+                </div>
+                   <div class="itemBox" data-item="cocktail">
+                    <h3>Spritz Hugo</h3>
+                    <p>Sambuco, Prosecco, tonica, menta</p>
+                    <p>Prezzo: &euro;7.00</p>
+                </div>
                 <div class="itemBox" data-item="cocktail">
                     <h3>Spritz Aperol/Campari</h3>
                     <p>Aperol/Campari, Prosecco, tonica</p>
@@ -428,7 +438,7 @@
                 <div class="itemBox" data-item="cocktail">
                     <h3>Negroni</h3>
                     <p>Gin, Martini rosso, Campari</p>
-                    <p>Prezzo: &euro;7.00</p>
+                    <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
                     <h3>Americano</h3>
@@ -436,53 +446,53 @@
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Cuba libre</h3>
+                    <h3>Cuba Libre</h3>
                     <p>Rum, coca cola</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Coca whisky</h3>
+                    <h3>Coca Whisky</h3>
                     <p>Coca cola, whisky</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Gin lemon</h3>
-                    <p>Gin, lemon</p>
+                    <h3>Gin Lemon</h3>
+                    <p>Gin, Lemon</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Gin tonic</h3>
+                    <h3>Gin Tonic</h3>
                     <p>Gin, acqua tonica</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Long island</h3>
+                    <h3>Long Island</h3>
                     <p>Rum, gin, vodka</p>
                     <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Sex on the beach</h3>
+                    <h3>Sex On The Beach</h3>
                     <p>Vodka, succo mirtillo, pesca</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Tequila sunrise</h3>
+                    <h3>Tequila Sunrise</h3>
                     <p>Tequila, succo arancia, granatina</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Vodka lemon</h3>
+                    <h3>Vodka Lemon</h3>
                     <p>Vodka, lemon</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Vodka pesca lemon</h3>
+                    <h3>Vodka Pesca Lemon</h3>
                     <p>Vodka alla pesca, lemon</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Vodka redbull</h3>
-                    <p>Vodka, redbull</p>
+                    <h3>Vodka Redbull</h3>
+                    <p>Vodka, Redbull</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
@@ -495,41 +505,41 @@
                     <p>Prosecco, fragola</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
-                <div class="itemBox" data-item="cocktail">
+               <!-- <div class="itemBox" data-item="cocktail">
                     <h3>Mimosa</h3>
                     <p>Prosecco, arancia, Grand mariner</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div> -->
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Baby doll</h3>
+                    <h3>Baby Doll</h3>
                     <p>Malib&ugrave;, ananas. arancia. fragola</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
-                    <h3>Black russian</h3>
+                    <h3>Black Russian</h3>
                     <p>Vodka, kahl&uacute;a</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
-                 <div class="itemBox" data-item="cocktail">
+                <!-- <div class="itemBox" data-item="cocktail">
                     <h3>Death by chocolate</h3>
                     <p>Vodka, crema, whisky, cioccolato</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div> -->
                  <div class="itemBox" data-item="cocktail">
                     <h3>Margarita</h3>
                     <p>Tequila, Contreau, limone</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                  <div class="itemBox" data-item="cocktail">
-                    <h3>Pina colada</h3>
+                    <h3>Pina Colada</h3>
                     <p>Ananas, cocco, rum</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
-                 <div class="itemBox" data-item="cocktail">
-                    <h3>Disaronno colada</h3>
+               <!--  <div class="itemBox" data-item="cocktail">
+                    <h3>Disaronno Colada</h3>
                     <p>Ananas, cocco, Amaretto Di Saronno</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div> -->
                 
                 <!-- Pestati con zucchero e lime -->
                 <div class="itemBox" data-item="pestati">
