--- a/menu/menu.html
+++ b/menu/menu.html
@@ -28,7 +28,7 @@
                 <option class="list" value="digestivi">Digestivi</option> 
                 <option class="list" value="coffeshop">Coffe shop</option> 
                 <option class="list" value="piadine">PIADINE</option> 
-                <option class="list" value="crescente">Crescente farcite</option> 
+               <!-- <option class="list" value="crescente">Crescente farcite</option> -->
                 <option class="list" value="fritti">I fritti e non solo</option> 
             </select>
             <div class="product">
@@ -746,7 +746,7 @@
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 
-                <!-- Crescente farcite -->
+               <!-- <!-- Crescente farcite -->
                 <div class="itemBox" data-item="crescente">
                     <h3>Semplice</h3>
                     <p>Al sale</p>
@@ -781,8 +781,7 @@
                     <h3>Paperoga</h3>
                     <p>Mozzarella e verdure alla griglia</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
-                
+                </div> -->                
                  <!-- I fritti e non solo -->
                 <div class="itemBox" data-item="fritti">
                     <h3>Polenta fritta con Gorgonzola fusa a parte</h3>
